Fix T69722: Pose brush crashes with multires modifier

Reviewed By: brecht

Maniphest Tasks: T69722

Differential Revision: https://developer.blender.org/D5759